Sat Aug 26 16:12:19 2000  Brian Gough  <bjg@network-theory.co.uk>

	* hybridj.c hybrid.c: renamed rdiag to tau, since it plays that
 	role here and is not the diagonal of R (see qr.c documentation for
 	more details)

Wed Feb 23 15:36:39 2000  Brian Gough  <bjg@network-theory.co.uk>

	* changed gsl_vector_copy to gsl_vector_cpy 

Fri Feb 18 18:45:02 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fixed various .c files to use permutation

Wed Feb 16 21:13:24 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fixed Makefiles that include gsl_linalg.h to add
 	-I$(srcdir)/../permutation to their include path
